ecommerce-eks/k8s/base/inventory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-deployment
  labels:
    app: inventory
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
        - name: inventory
          image: 361769595099.dkr.ecr.us-east-1.amazonaws.com/ecommerce-inventory:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: shop
  labels:
    app: inventory
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "8002"         # 👈 Prometheus scrapes the app port
spec:
  selector:
    app: inventory
  ports:
    - name: http
      port: 8002
      targetPort: 8000
  type: ClusterIP
