ecommerce-eks/k8s/base/orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deployment
  labels:
    app: orders
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: 361769595099.dkr.ecr.us-east-1.amazonaws.com/ecommerce-orders:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  labels:
    app: orders
spec:
  selector:
    app: orders
  ports:
    - port: 8084
      targetPort: 8080
  type: ClusterIP
