ecommerce-eks/k8s/base/payments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-deployment
  namespace: shop
  labels:
    app: payments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          image: 361769595099.dkr.ecr.us-east-1.amazonaws.com/ecommerce-payments:latest
          ports:
            - containerPort: 8003
          # === Added resources section ===
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: payments-service
  namespace: shop
  labels:
    app: payments
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "8003"   # Prometheus talks to the Service on 8003
spec:
  selector:
    app: payments
  ports:
    - name: http
      port: 8003        # Service port
      targetPort: 8000
  type: ClusterIP
