ecommerce-eks/k8s/base/products.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-deployment
  labels:
    app: products
spec:
  replicas: 2
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
        - name: products
          image: 361769595099.dkr.ecr.us-east-1.amazonaws.com/ecommerce-products:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: products-service
spec:
  selector:
    app: products
  ports:
    - port: 8001
      targetPort: 8000
