ecommerce-eks/k8s/base/storefront-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storefront-service
spec:
  selector:
    app: storefront
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
