ecommerce-eks/k8s/base/storefront.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storefront-deployment
  labels:
    app: storefront
spec:
  replicas: 1
  selector:
    matchLabels:
      app: storefront
  template:
    metadata:
      labels:
        app: storefront
    spec:
      containers:
        - name: storefront
          image: 361769595099.dkr.ecr.us-east-1.amazonaws.com/ecommerce-storefront:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: storefront-service
  labels:
    app: storefront
spec:
  selector:
    app: storefront
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
