ecommerce-eks/k8s/base/users.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
  namespace: shop
  labels:
    app: users
spec:
  replicas: 2
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      serviceAccountName: app-secrets-sa
      containers:
        - name: users
          image: 361769595099.dkr.ecr.us-east-1.amazonaws.com/ecommerce-users:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: users-service
  namespace: shop
  labels:
    app: users
spec:
  selector:
    app: users
  ports:
    - name: http
      port: 8083
      targetPort: 8080
  type: ClusterIP
