ecommerce-eks/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shop-ingress
  namespace: shop
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: storefront-service
                port:
                  number: 80

          - path: /products
            pathType: Prefix
            backend:
              service:
                name: products-service
                port:
                  number: 8001

          - path: /inventory
            pathType: Prefix
            backend:
              service:
                name: inventory-service
                port:
                  number: 8002

          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: orders-service
                port:
                  number: 8084

          - path: /users
            pathType: Prefix
            backend:
              service:
                name: users-service
                port:
                  number: 8083

          - path: /payments
            pathType: Prefix
            backend:
              service:
                name: payments-service
                port:
                  number: 8003
